Starting writing of vectors and covectors

--- a/main.tex
+++ b/main.tex
@@ -288,6 +288,7 @@ This gives us vectors and covectors: the former being infinitesimal segments, an
 
 - Starting with the 1D case: for a given line, a vector will be an infinitesimal segment along that line. 
 
+This derivation brings to light two new tools that allow us to better describe k-functionals over infinitesimals. 
 
 \begin{defn}
 	A \textbf{vector} $v^1 \in V^1$ is an infinitesimal segment along a line. A \textbf{tangent plane}, then, is a collection of vectors that share a fixed point. 
