--- a/main.tex
+++ b/main.tex
@@ -320,40 +320,40 @@ These sorts of functions are very familiar to us already. A force applied over a
 
 \emph{Note that electrodynamics has been reworked in the language of k-vectors. Probably a good example to use}
 
+Conceptually, this section will be an expansion and generalization of the previous section. Whereas before we were only worrying about 1-surfaces and 1-functionals, now we will be going up to the general k-surfaces and k-functionals. Just as before, we will be following a brief derivation of the new geometric objects in question. 
 
-
-
-
-- We want to be able to give a line, surface, body, etc. an orientation. This gives us k-vectors.
-
-- Further, we're now talking about vectors and covectors in arbitrary dimensions
-
-- Here we will be talking about wedge products, and how they behave with k-vectors of different degrees. 
-
+\textbf{PUT IN A DERIVATION HERE, A LA PREVIOUS SECTION}
 
 
 \begin{defn}
 	A \textbf{k-vector} $v^k \in V^k$ is an infinitesimal parallelepiped on a k-surface. A vector as discussed previously is a 1-vector. A \textbf{tangent space} is then a collection of k-vectors that share a fixed corner. 
 \end{defn}
 
+
 - \emph{Talking about orientation in terms of quantities: if we flip a quantity, we flip the orientation. Also, it should follow naturally that adding k-vectors of equal magnitude and opposite orientation will give zero.}
 
 
 
 \begin{defn}
-	$V^k$ is the set of all vectors of rank k and $V = \cup_{k=0}^n V^k$ is the set of all k-vectors. 
+	$V^k$ is the set of all vectors of rank k and $V = \cup_{k=0}^n V^k$ is the set of all vectors. 
 	\end{defn}
 
+Parallelepipeds are 3D objects, more flexible than a cube, whose sides are parallelograms, which are more flexible than squares. In general, an infinitesimal bit along a k-surface will take the form of a paralellepiped. In the case of k = 1, an infinitesimal segment of a line may be thought of as a parallelepiped without width or heighth. By that same token, when k = 2, an infinitesimal area on a 2-surface may be thought of as a parallelepiped without height. 
 
+The sides of a k-vector are themselves k-vectors of lower degree. They are adjoined end-to-end or side-to-side to create k-vectors of higher degree. Each one of these sides will have an orientation, discussed later. The tool used to combine k-vectors is the \textbf{wedge product}. 
 
 \begin{defn}
 	
 	The \textbf{wedge product} $\wedge : V^k\times V^j \to V^{k+j}$ combines k-vectors antisymmetrically to generate parallelepipeds. 
 \end{defn}
 
+In $\mathbb{R}^3$, the wedge product is simply the cross product "$\times$", familiar to anyone who's studied vector calculus and electromagnetism. 
+
 \begin{coro}
 	The orientation of each side of the parallelepiped is different, as determined by the factors in the wedge product. 
 \end{coro}
+
+Now that we have a generalization of vectors, we need a generalization of covectors to use on them. These are \textbf{k-forms}, and are, as always, categorized by the number of degrees of freedom. 
 
 \begin{defn}
 	A \textbf{k-form} $\omega_k : V^k \to \mathbb{R}$ is a skew-symmetric linear functional that converts an infinitesimal parallelepiped into a scalar value. A covector as discussed previously is a 1-form. 
@@ -363,8 +363,10 @@ These sorts of functions are very familiar to us already. A force applied over a
 	$\Omega_k$ is the set of all forms of dimension k and $\Omega = \cup_{k=0}^n\Omega_k$ is the set of all forms. 
 \end{defn}
 
+To finish up the generalization of the previous section, we establish the relationship between k-functionals and k-forms, between k-surfaces and k-vectors. They are related by an integral, though, as in the case of a length function when k = 1, not every k-functional can be related to a k-form in this way. A k-functional that returns the "k-volume", if you will, cannot be turned into a k-form. 
+
 \begin{prop}
-	Every linear k-functional has a corresponding k-form, such that for $f_k : S^k \to \mathbb{R}$, $f_k = \int_{\sigma^k} \omega_k(d\sigma^k)$. In words, a linear functional applied over a k-surface is the same as an integral of a k-form over the infinitesimal parallelepipedes of that k-surface. 
+	Many linear k-functional has a corresponding k-form, such that for $f_k : S^k \to \mathbb{R}$, $f_k = \int_{\sigma^k} \omega_k(d\sigma^k)$. In words, a linear functional applied over a k-surface is the same as an integral of a k-form over the infinitesimal parallelepipedes of that k-surface. 
 \end{prop}
 
 \section{Coordinates and components?}
